--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
-    "@authing/vue-ui-components": "^2.4.56",
     "animate.css": "^4.1.0",
     "ant-design-vue": "1.7.2",
+    "authing-js-sdk": "^4.22.24",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
