--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build",
+    "serve:prod": "vue-cli-service serve --mode prod",
+    "build": "vue-cli-service build --mode prod",
     "build:test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint",
     "predeploy": "yarn build",
