--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "viser-vue": "^2.4.8",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^3.3.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
