--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "authing-js-sdk": "^4.22.24",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
+    "clonedeep": "^2.0.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
     "enquire.js": "^2.1.6",
