--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vue-cli-service serve --mode development",
     "serve:prod": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build --mode prod",
+    "build:dev": "vue-cli-service build --mode development",
     "build:test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint",
     "predeploy": "yarn build",
