--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_PUBLIC_PATH=/
-VUE_APP_NAME=瑶池管理系统
+VUE_APP_NAME=南天门
 VUE_APP_ROUTES_KEY=admin.routes
 VUE_APP_PERMISSIONS_KEY=admin.permissions
 VUE_APP_ROLES_KEY=admin.roles
