--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "animate.css": "^4.1.0",
     "ant-design-vue": "1.7.2",
     "authing-js-sdk": "^4.22.24",
