--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "animate.css": "^4.1.0",
     "ant-design-vue": "1.7.2",
-    "authing-js-sdk": "^4.22.24",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "clonedeep": "^2.0.0",
+    "compression-webpack-plugin": "5.0.1",
     "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
     "enquire.js": "^2.1.6",
@@ -31,6 +32,7 @@
     "lrz": "^4.9.41",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "style-resources-loader": "^1.5.0",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
@@ -38,7 +40,8 @@
     "vue-router": "^3.3.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "webpack": "5.0.0"
   },
   "devDependencies": {
     "@ant-design/colors": "^4.0.1",
@@ -49,14 +52,12 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-polyfill": "^6.26.0",
-    "compression-webpack-plugin": "^2.0.0",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "fast-deep-equal": "^3.1.3",
     "gh-pages": "^3.1.0",
     "less-loader": "^6.1.1",
-    "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.2",
