--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://iczer.github.io/vue-antd-admin",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
+    "serve": "vue-cli-service serve --mode dev",
+    "serve:dev": "vue-cli-service serve --mode development",
     "serve:prod": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build --mode prod",
     "build:dev": "vue-cli-service build --mode development",
